--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,27 @@
   opacity: 0;
 }
 
+/* YourComponentStyles.css */
+
+.learn-more-container {
+  position: relative;
+}
+
+.learn-more-container::after {
+  content: "";
+  position: absolute;
+  background-color: #7743db; /* Add the underline effect on hover */
+  bottom: -10px;
+  height: 4px;
+  width: 0;
+  border-radius: 10px;
+  transition: 0.3s linear;
+}
+
+.learn-more-container:hover::after {
+  width: 100%;
+}
+
 /* .fadeContainer {
   position: relative;
   width: 100%;
