--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,36 @@
   width: 100%;
 }
 
+::-webkit-scrollbar-button {
+  height: 12px;
+}
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar:window-inactive {
+  /* background: rgba(255, 0, 0, 0.4); */
+  background: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--bg-promary);
+}
+::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: rgba(0, 0, 3, 0.3);
+  /* background: transparent; */
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  /* background: rgba(255, 0, 0, 0.4); */
+  background: transparent;
+}
+
 /* .fadeContainer {
   position: relative;
   width: 100%;
