--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,11 @@
   opacity: 0;
 }
 
+.slick-slide {
+  padding: 0 8px;
+  box-sizing: border-box;
+}
+
 /* YourComponentStyles.css */
 
 .learn-more-container {
