--- a/app/globals.css
+++ b/app/globals.css
@@ -32,8 +32,6 @@
   box-sizing: border-box;
 }
 
-/* YourComponentStyles.css */
-
 .learn-more-container {
   position: relative;
 }
@@ -41,7 +39,7 @@
 .learn-more-container::after {
   content: "";
   position: absolute;
-  background-color: #7743db; /* Add the underline effect on hover */
+  background-color: #7743db;
   bottom: -10px;
   height: 4px;
   width: 0;
@@ -115,28 +113,4 @@
 
 .fadeIn:not(:first-child) {
   opacity: 0;
-} */
-
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 } */
