--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,30 @@
   box-sizing: border-box;
 }
 
+.slick-prev {
+  left: -31px !important;
+}
+
+.slick-next {
+  right: -20px !important;
+}
+
+@media screen and (max-width: 768px) {
+  .slick-prev {
+    left: -25px !important;
+  }
+
+  .slick-next {
+    right: -15px !important;
+  }
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-size: 30px !important;
+  color: #4b5563 !important;
+}
+
 .learn-more-container {
   position: relative;
 }
