--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+.fade-enter {
+  opacity: 0;
+  transform: translateX(-20px);
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 500ms linear, transform 500ms linear;
+}
+
 .PhoneInputInput {
   background: none;
 }
@@ -119,18 +130,3 @@
   /* background: rgba(255, 0, 0, 0.4); */
   background: transparent;
 }
-
-/* .fadeContainer {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.fadeIn {
-  opacity: 1;
-  transition: opacity 1s ease-in-out;
-}
-
-.fadeIn:not(:first-child) {
-  opacity: 0;
-} */
